--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-EMAIL=Your Email Here
-PASS=Your Password Here
+EMAIL=yogamusik15@gmail.com
+PASS=cZdghgs212
 WEBSITE=https://free-doge.com/set-language/en
-MINWALLET=40
+MINWALLET=10
